<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_300_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_failed" />

    <TextView
        android:id="@+id/error_tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/generic_error_title"
        android:textAlignment="center"
        android:textColor="@color/gray_3535"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/lottie_animation_view"
        app:layout_constraintEnd_toEndOf="@+id/lottie_animation_view"
        app:layout_constraintStart_toStartOf="@+id/lottie_animation_view" />

    <TextView
        android:id="@+id/error_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/generic_error_description"
        android:textAlignment="center"
        android:textColor="@color/gray_3535"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lottie_animation_view"
        app:layout_constraintStart_toStartOf="@+id/lottie_animation_view"
        app:layout_constraintTop_toBottomOf="@+id/error_tittle" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_error_try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_description" />

    <ImageView
        android:layout_width="@dimen/size_250_dp"
        android:layout_height="@dimen/size_250_dp"
        android:alpha="0.20"
        android:contentDescription="@string/accessibility_background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/star_wars_image_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>