<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_2020">

    <ImageView
        android:id="@+id/img_star_wars_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_48_dp"
        android:layout_marginTop="@dimen/size_24_dp"
        android:contentDescription="@string/accessibility_background_image"
        android:scaleType="fitCenter"
        android:src="@drawable/star_wars_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar_container"
        style="@style/SearchButtonDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16_dp"
        android:contentDescription="@string/accessibility_search_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_star_wars_logo">

        <ImageView
            android:id="@+id/image_search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:padding="@dimen/size_4_dp"
            android:src="@drawable/ic_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_search_bar"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_search_bar"
            style="@style/TextAppearanceBold16"
            android:text="@string/search_hint_persons_description"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_search_bar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_img_cover"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_300_dp"
        android:layout_margin="@dimen/size_16_dp"
        app:cardCornerRadius="@dimen/size_8_dp"
        app:cardElevation="@dimen/size_8_dp"
        android:backgroundTint="@color/gray_1212"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar_container">

        <ImageView
            android:id="@+id/img_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_8_dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_foreground"
            android:importantForAccessibility="no" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </ScrollView>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btn_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8_dp"
        android:layout_marginTop="@dimen/size_16_dp"
        android:contentDescription="@string/accessibility_return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_left" />

    <ImageView
        android:id="@+id/btn_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_16_dp"
        android:contentDescription="@string/accessibility_share_button"
        app:layout_constraintBottom_toBottomOf="@+id/btn_return_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_return_button"
        app:srcCompat="@drawable/ic_share_24" />

    <ImageView
        android:id="@+id/img_add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16_dp"
        android:contentDescription="@string/accessibility_favorite_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_name"
        app:srcCompat="@drawable/ic_add_circle" />

    <TextView
        android:id="@+id/txt_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:text="@string/add_list"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_add_favorite"
        app:layout_constraintStart_toStartOf="@+id/img_add_favorite"
        app:layout_constraintTop_toBottomOf="@+id/img_add_favorite" />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16_dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:maxLines="1"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2.5"
        android:shadowRadius="1.6"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_24_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_img_cover"
        tools:text="Luke Skywalker" />

    <TextView
        android:id="@+id/gender_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_32_dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-black"
        android:maxLines="1"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2.5"
        android:shadowRadius="1.6"
        android:textColor="@color/aqua_blue"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_add_favorite"
        app:layout_constraintTop_toTopOf="@+id/img_add_favorite"
        tools:text="male" />

    <TextView
        android:id="@+id/hair_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_8_dp"
        android:layout_marginStart="@dimen/size_16_dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-black"
        android:maxLines="1"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2.5"
        android:shadowRadius="1.6"
        android:textColor="@color/aqua_blue"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gender_name"
        app:layout_constraintStart_toEndOf="@+id/gender_name"
        app:layout_constraintTop_toTopOf="@+id/gender_name"
        tools:text="blond" />

    <TextView
        android:id="@+id/height_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16_dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-black"
        android:maxLines="1"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2.5"
        android:shadowRadius="1.6"
        android:textColor="@color/aqua_blue"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gender_name"
        app:layout_constraintTop_toBottomOf="@+id/gender_name"
        tools:text="172" />

    <TextView
        android:id="@+id/year_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_8_dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-black"
        android:maxLines="1"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2.5"
        android:shadowRadius="1.6"
        android:textColor="@color/aqua_blue"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/height_value"
        app:layout_constraintStart_toStartOf="@+id/hair_color"
        app:layout_constraintTop_toTopOf="@+id/height_value"
        tools:text="19BBY" />

</androidx.constraintlayout.widget.ConstraintLayout>
