<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_2020"
    android:fillViewport="true">

    <ImageView
        android:id="@+id/img_star_wars_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_48_dp"
        android:layout_marginTop="@dimen/size_24_dp"
        android:contentDescription="@string/accessibility_background_image"
        android:scaleType="fitCenter"
        android:src="@drawable/star_wars_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8_dp"
        android:contentDescription="@string/accessibility_return_button"
        app:layout_constraintBottom_toBottomOf="@+id/img_star_wars_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_star_wars_logo"
        app:srcCompat="@drawable/ic_arrow_left" />

    <ImageView
        android:id="@+id/btn_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_16_dp"
        android:contentDescription="@string/accessibility_share_button"
        app:layout_constraintBottom_toBottomOf="@+id/img_star_wars_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_star_wars_logo"
        app:srcCompat="@drawable/ic_share_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar_container"
        style="@style/SearchButtonDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16_dp"
        android:contentDescription="@string/accessibility_search_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_star_wars_logo">

        <ImageView
            android:id="@+id/image_search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:padding="@dimen/size_4_dp"
            android:src="@drawable/ic_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_search_bar"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_search_bar"
            style="@style/TextAppearanceBold16"
            android:text="@string/search_hint_persons_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_search_bar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0_dp"
        android:layout_marginTop="@dimen/size_16_dp"
        android:background="@color/gray_2020"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_2020">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/size_16_dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/size_16_dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_img_cover"
                android:layout_width="@dimen/size_0_dp"
                android:layout_height="@dimen/size_300_dp"
                android:backgroundTint="@color/gray_1212"
                app:cardCornerRadius="@dimen/size_8_dp"
                app:cardElevation="@dimen/size_8_dp"
                app:layout_constraintEnd_toEndOf="@id/guide_line_end"
                app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/size_8_dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_foreground" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_add_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/accessibility_favorite_button"
                app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                app:layout_constraintTop_toBottomOf="@+id/title_name"
                app:srcCompat="@drawable/ic_add_circle" />

            <TextView
                android:id="@+id/txt_favorite"
                style="@style/TextAppearanceDefaultBold"
                android:importantForAccessibility="no"
                android:text="@string/add_list"
                app:layout_constraintEnd_toEndOf="@+id/img_add_favorite"
                app:layout_constraintStart_toStartOf="@+id/img_add_favorite"
                app:layout_constraintTop_toBottomOf="@+id/img_add_favorite" />

            <TextView
                android:id="@+id/title_name"
                style="@style/TextAppearanceShadow24"
                app:layout_constraintEnd_toStartOf="@+id/guide_line_end"
                app:layout_constraintStart_toStartOf="@+id/guide_line_start"
                app:layout_constraintTop_toBottomOf="@+id/card_img_cover"
                tools:text="A New Hope" />

            <TextView
                android:id="@+id/director_name"
                style="@style/TextAppearanceShadow16"
                android:layout_width="wrap_content"
                android:textColor="@color/aqua_green"
                app:layout_constraintEnd_toEndOf="@id/guide_line_end"
                app:layout_constraintStart_toEndOf="@+id/img_add_favorite"
                app:layout_constraintTop_toTopOf="@+id/img_add_favorite"
                tools:text="Director by George Lucas" />

            <TextView
                android:id="@+id/producer_name"
                style="@style/TextAppearanceShadow16"
                android:textColor="@color/aqua_blue"
                app:layout_constraintEnd_toEndOf="@id/guide_line_end"
                app:layout_constraintStart_toStartOf="@+id/director_name"
                app:layout_constraintTop_toBottomOf="@+id/director_name"
                tools:text="Producer by Gary Kurtz, Rick McCallum" />

            <TextView
                android:id="@+id/release_date"
                style="@style/TextAppearanceShadow16"
                android:textColor="@color/aqua_blue"
                app:layout_constraintEnd_toEndOf="@id/guide_line_end"
                app:layout_constraintStart_toStartOf="@+id/director_name"
                app:layout_constraintTop_toBottomOf="@+id/producer_name"
                tools:text="Release Date - 1977-05-25" />

            <TextView
                android:id="@+id/movie_description"
                style="@style/TextAppearanceBold14"
                android:layout_width="0dp"
                android:layout_marginVertical="@dimen/size_16_dp"
                android:background="@color/alpha_gray_1212"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release_date"
                tools:text="It is a period of civil war.\r\nRebel spaceships, striking\r\nfrom a hidden base, have won\r\ntheir first victory against\r\nthe evil Galactic Empire..." />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

